--- a/wp-content/themes/everthewayfarer2016/sass/layout/_woocommerce.scss
+++ b/wp-content/themes/everthewayfarer2016/sass/layout/_woocommerce.scss
@@ -476,7 +476,7 @@ p.stars {
   z-index: 100;
   position: fixed;
   left: 0;
-  top: 65px;
+  top: 50px;
   width: 100%;
   color: white;
   font-size: 1.1em;
@@ -486,7 +486,15 @@ p.stars {
   transition: opacity .3s;
   
   .admin-bar & {
-    top: 95px;
+    top: 96px;
+    
+    @include media(em(783)){
+      top: 88px;
+    }
+  }
+  
+  @include media($large-screen){
+    top: 65px; 
   }
   
   &.is-faded {    
@@ -526,7 +534,7 @@ p.stars {
   
   .close-button {
     position: absolute;
-    right: 2em;
+    right: 1em;
     top: 1em;
     background: white;
     display: block;
